# ease25-repl-pkg

./: .gitignore  .gitmodules  README.md  RunnerConfig.py  RunnerConfig_execution.py  RunnerConfig_execution_GL2.py  RunnerConfig_execution_NUC.py  pyproject.toml  requirements.txt  setup_experimental_machine.sh  subject_requirements.txt  testing.py
code/: README.md  fasta_input.tar.xz  test.py  warmup.py
code/codon/: binary_trees.py  fannkuch_redux.py  fasta.py  k_nucleotide.py  mandelbrot.py  nbody.py  spectralnorm.py
code/control_group/codon/: build.sh  fannkuch_redux.py  fasta.py  k_nucleotide.py  nbody.py  spectralnorm.py
code/control_group/cpython/: binary_trees.py  n_body.py
code/control_group/cython/: build.py  exec.py
code/cython/: build.py  exec.py
code/functions/: binary_trees.py  fasta.py  mandelbrot.py  nbody.py  spectralnorm.py
code/line_profiler/: binary_trees.py  fasta.py  fasta.py.lprof  k_nucleotide.py  mandelbrot.py  mandelbrot.py.lprof  spectralnorm.py  spectralnorm.py.lprof
code/mypyc/: build.py
code/numba/: binary_trees.py  fannkuch_redux.py  fasta.py  k_nucleotide.py  mandelbrot.py  nbody.py  spectralnorm.py
code/outputs/: binary_trees.txt  k_nucleotide.txt  n_body.txt
code/python/: binary_trees.py  fannkuch_redux.py  fasta.py  k_nucleotide.py  mandelbrot.py  nbody.py
code/test/: control.py  exp.py  test.py  utils.py
experiments/: gl2_data.csv  nuc_data.csv
functions/: README.md  warmup.py
notebooks/: Descriptive_Statistics.ipynb  Improvement.ipynb  RQ1_Energy_Server.ipynb  RQ2_Execution_Time.ipynb  replace.ipynb  utils.py  utils_old.py
(+91 files in other folders)
