[tool.poetry]
name = "code"
version = "0.1.0"
description = "Replication Package for the Green Compiled Python Project"
authors = ["Vincenzo Stoico <v.stoico@vu.nl>", "Andrei Calin Dragomir <a.dragomir@student.vu.nl>"]
license = "CC-BY"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
setuptools = "^75.4.0"
line-profiler = "^4.1.3"

[tool.poetry.group.experiment.dependencies]
numba = "^0.60.0"
nuitka = "^2.5.6"
cython = "^3.0.11"
mypy = {extras = ["mypyc"], version = "^1.13.0"}

[tool.poetry.group.orchestration.dependencies]
scp = "^0.15.0"
paramiko = "^3.5.0"
python-dotenv = "^1.0.1"
pandas = "^2.2.3"
psutil = "^6.1.0"
tabulate = "^0.9.0"
dill = "^0.3.9"
jsonpickle = "^4.0.0"

[tool.poetry.group.data_analysis.dependencies]
seaborn = "^0.13.2"
matplotlib = "^3.9.3"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core", "setuptools", "Cython"]
build-backend = "poetry.core.masonry.api"
